--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.MyContactList"
         tools:targetApi="31">
         <activity
+            android:name=".ContactSettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ContactMapActivity"
+            android:exported="false" />
+        <activity
             android:name=".ContactListActivity"
             android:exported="false" />
         <activity
