--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,17 @@
     <uses-feature
         android:name="android.hardware.telephony"
         android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false"/>
 
     <uses-permission android:name="com.example.mycontactlist.permission.MAPS_RECEIVE">
     </uses-permission>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-    <uses-permission android:name="android.permission.CALL_PHONE">
+    <uses-permission android:name="android.permission.CALL_PHONE"
+        >
 
     </uses-permission>
     <uses-permission android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS" />
